fix spacing (hopefully)

--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,7 @@
 #slogan{
   margin-top: 7rem;
 }
+
+#homepagelogo{
+  margin-left: 2rem;
+}
